--- a/duchamp_reader/static/css/bootstrap.css
+++ b/duchamp_reader/static/css/bootstrap.css
@@ -11642,4 +11642,44 @@ a[data-toggle="collapse"] {
   width: 40%;
 }
 
+/* bouton enrichissements wikipedia */
+.labels {
+  color: var(--bs-white) !important;
+  display: flex;
+  justify-content: center;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
+.toggle {
+  --width: 230px;
+  --height: calc(var(--width) / 8);
+  position: relative;
+  display: inline-block;
+  width: var(--width);
+  height: var(--height);
+  border-radius: var(--height);
+  cursor: pointer;
+  text-align: center;
+  transition: all 0.4s ease-in-out !important;
+}
+
+.toggle:hover {
+  background-color: var(--custom-light-pink) !important;
+}
+
+.toggle input {
+  display: none;
+}
+
+.toggle .slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: var(--height);
+}
+
+
 /*# sourceMappingURL=bootstrap.css.map */
