--- a/duchamp_reader/templates/pages/accueil.html
+++ b/duchamp_reader/templates/pages/accueil.html
@@ -27,6 +27,12 @@
         {% endfor %}
         </ul>
 
+        <p>
+            Les pages sur les artistes sont enrichies de données issues de Wikipedia. Comme cela ralentit
+            la navigation, vous pouvez désactiver ou réactiver cette fonctionnalité à tout moment en cliquant
+            sur le "menu burger".
+        </p>
+
         <!-- sparql -->
         <h2>Enrichir vos jeux de données</h2>
         <p>Explorez Wikidata avec le <a href="{{ url_for('sparql') }}">duchamp_sparqler</a>, un constructeur de requêtes SPARQL !</p>
