--- a/duchamp_reader/templates/conteneur.html
+++ b/duchamp_reader/templates/conteneur.html
@@ -5,7 +5,10 @@
         <title>duchamp_reader {% block titre %}{% endblock %}</title>
             {% include "partials/metadata.html" %}
             {% include "partials/css.html" %}
-        </style>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         <!-- barre de navigation -->
@@ -138,8 +141,15 @@
                                 Code source (Github)
                             </a>
                         </li>
+                        <li class="active">
+                            <a href="#">Enrichissements wikipedia</a>
+                            <label class="toggle" id="wikitoggle">
+                                <input type="checkbox"/>
+                                <span class="slider"/>
+                                <span class="labels" id="wikitext"></span>
+                            </label>
+                        </li>
                     </ul>
-                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" id="sidebarFermer">Fermer</a>
                 </nav>
             </div>
 
@@ -182,32 +192,171 @@
 
         </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                crossorigin="anonymous"></script>
 
-            <script type="text/javascript">
-                var sidebar = document.querySelector("#sidebar");
-                var main = document.querySelector(".row");
-                var hero = document.querySelector(".hero");
+        <script type="text/javascript">
+            // COMPORTEMENT DU NAVBAR
 
-                function collapse() {
-                    if (sidebar.getAttribute("style") == "width: 0px;") {
-                        sidebar.setAttribute("style", "width: 250px; padding-left: 10px;");
-                        main.setAttribute("style", "margin-left: 250px;");
-                        hero.setAttribute("style", "margin-left: 250px;");
-                    } else {
-                        sidebar.setAttribute("style", "width: 0px;");
-                        main.setAttribute("style", "margin-left: auto;");
-                        hero.setAttribute("style", "margin-left: auto;");
-                    };
-                };
+            // définition des variables
+            var sidebar = document.querySelector("#sidebar");
+            var main = document.querySelector(".row");
+            var hero = document.querySelector(".hero");
 
-                function closeNav() {
+            // ouvrir / fermer le navbar
+            function collapse() {
+                if (sidebar.getAttribute("style") == "width: 0px;") {
+                    sidebar.setAttribute("style", "width: 250px; padding-left: 10px;");
+                    main.setAttribute("style", "margin-left: 250px;");
+                    hero.setAttribute("style", "margin-left: 250px;");
+                } else {
                     sidebar.setAttribute("style", "width: 0px;");
                     main.setAttribute("style", "margin-left: auto;");
                     hero.setAttribute("style", "margin-left: auto;");
                 };
-            </script>
+            };
+
+            // fonction pour fermer le navbar
+            function closeNav() {
+                sidebar.setAttribute("style", "width: 0px;");
+                main.setAttribute("style", "margin-left: auto;");
+                hero.setAttribute("style", "margin-left: auto;");
+            };
+
+            ////////////////////////////////////////////////////////////
+
+            // ACTIVATION / DÉSACTIVATION DES ENRICHISSEMENTS WIKIPEDIA
+
+            // définition des variables
+            const visited = window.localStorage.getItem("visited") !== null;  // cookie permettant de définir le comportement de base du bouton
+            const text = window.localStorage.getItem("text");  // cookie permettant de stoker le texte à afficher dans le bouton wikipedia
+            const css = window.localStorage.getItem("css");  // cookie permettant de stocker le css pour le bouton wikipedia
+            const wikisave = window.localStorage.getItem("wikisave");  // valeur de l'@value de wiki dans sauvegardée comme cookie
+            const wiki = document.querySelector("#wikitoggle input");  // bouton d'activation / désactivation wikipedia
+            var wikival = wiki.getAttribute("value");  // valeur actuelle de l'@value de wiki
+            var wikitext = document.querySelector("#wikitext");  // texte du bouton d'activation wikipedia
+            var blue =  "#0000ef"; // bleu utilisé comme couleur de fond
+            var plum =  "#bd148b"; // prune utilisée comme couleur de fond
+            var wikicont = document.querySelector("#wikitoggle");  // l'élément conteneur du bouton
+
+            // initialisation de la fonction d'activation / désactivation de wikipedia
+            wiki.addEventListener("click", wikiToggle);
+
+            // définir le comportement de base: wikipedia activé
+            if (!visited) {
+                window.localStorage.setItem("visited", true);
+                wiki.setAttribute("value", "active");
+                wikival = wiki.getAttribute("value");
+
+                // mettre à jour le css et le texte
+                wikitext.innerText = "activés";
+                wikicont.style.backgroundColor = plum;
+
+                // récupérer la valeur de l'attribut, le texte et le css
+                // et les sauvegarder en cookie
+                wikival = wiki.getAttribute("value");
+                localStorage.setItem("wikisave", wikival);
+                localStorage.setItem("text", wikitext.innerText);
+                localStorage.setItem("css", wikicont.style.backgroundColor);
+            };
+
+            // activer / désactiver l'enrichissement wikipédia des pages artiste
+            function wikiToggle() {
+                // modifier la value du bouton wikipedia
+                if (wiki.getAttribute("value") === "inactive") {
+                    wiki.setAttribute("value", "active");
+
+                    // mettre à jour le css et le texte
+                    wikitext.innerText = "activés"
+                    wikicont.style.backgroundColor = plum;
+                } else {
+                    wiki.setAttribute("value", "inactive");
+
+                    // mettre à jour le css et le texte
+                    wikitext.innerText = "désactivés";
+                    wikicont.style.backgroundColor = blue;
+                };
+
+                // récupérer la valeur de l'attribut, le texte et le css
+                // et les sauvegarder en cookie
+                wikival = wiki.getAttribute("value");
+                localStorage.setItem("wikisave", wikival);
+                localStorage.setItem("text", wikitext.innerText);
+                localStorage.setItem("css", wikicont.style.backgroundColor);
+
+                // transmettre une requête asynchrone au serveur flask
+                var data = {"wikistatus": wiki.getAttribute("value")};
+                $.ajax({
+                    type: "GET",
+                    url: "/wikistatus",
+                    data: data,
+                    dataType: 'json',
+                });
+            };
+
+            // charger le css et le texte du bouton wikipedia au chargement
+            window.onload = function(){
+                wikitext.innerText = text;
+                wikicont.style.backgroundColor = css;
+            };
+
+            ////////////////////////////////////////////////////////////
+
+            // CAROUSEL DES PAGES "ARTISTE"
+            // définition des variables
+            var slides = document.querySelectorAll('.slides img');
+            var currentSlide = 0;
+            var slideInterval = setInterval(nextSlide,3500);
+            var playing = true;
+            var pausebtn = document.querySelector('#pause');
+            var prevbtn = document.querySelector('#prev');
+            var nextbtn = document.querySelector('#next');
+
+            //slide automatique
+            function nextSlide() {
+              slides[currentSlide].className = 'slide';
+              currentSlide = (currentSlide+1)%slides.length;
+              slides[currentSlide].className = 'shown';
+            };
+
+            // pause et play
+            function pauseSlideshow() {
+              pausebtn.innerHTML = 'reprendre';
+              playing = false;
+              clearInterval(slideInterval);
+            };
+            function playSlideshow() {
+              pausebtn.innerHTML = 'pause';
+              playing = true;
+              slideInterval = setInterval(nextSlide,3500);
+            };
+            // slide précédente et suivante
+            function prevSlide() {
+              toSlide(currentSlide-1);
+            };
+            function nextSlide() {
+              toSlide(currentSlide+1);
+            };
+            function toSlide(n) {
+              slides[currentSlide].className = 'slide';
+              currentSlide = (n+slides.length)%slides.length;
+              slides[currentSlide].className = 'shown';
+            };
+
+            // action des bouttons
+            pausebtn.onclick = function() {
+              if(playing) {
+                pauseSlideshow();
+              } else {
+                playSlideshow();
+              }
+            };
+            prevbtn.onclick = function() {
+              pauseSlideshow()
+              prevSlide();
+            };
+            nextbtn.onclick = function() {
+              pauseSlideshow()
+              nextSlide();
+            }
+        </script>
     </body>
 </html>
