--- a/duchamp_reader/templates/pages/galerie_index.html
+++ b/duchamp_reader/templates/pages/galerie_index.html
@@ -69,6 +69,7 @@
     <!-- footer -->
     <div class="basdepage">
         <a class="btn" href="{{url_for('accueil')}}">Accueil</a>
+        <a class="btn" href="{{ url_for('galerie_add') }}">Ajouter une galerie</a>
     </div>
 
 {% endblock %}
