--- a/duchamp_reader/templates/pages/duchamp_sparqler.html
+++ b/duchamp_reader/templates/pages/duchamp_sparqler.html
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <div id="sparqlform">
+        <div id="sparqlform" class="check">
             <!-- url -->
             <div class="form-check">
                 <label for="url" class="col-sm-2 col-form-label">Adresse du site internet de l'artiste</label>
