--- a/duchamp_reader/templates/pages/galerie_add.html
+++ b/duchamp_reader/templates/pages/galerie_add.html
@@ -1,9 +1,9 @@
 {% extends "conteneur.html" %}
 
-{% block titre %}| nouveau thème{% endblock %}
+{% block titre %}| nouvelle galerie{% endblock %}
 
 {% block corps %}
-    <h1>Ajouter un nouveau thème à la base de données</h1>
+    <h1>Ajouter une nouvelle galerie à la base de données</h1>
 
     <!-- corps du texte -->
     <p>Pour ajouter une nouvelle galerie à la base de données, veuillez remplir
