--- a/duchamp_reader/templates/conteneur.html
+++ b/duchamp_reader/templates/conteneur.html
@@ -399,6 +399,7 @@
                 deleteBtn.addEventListener("click", redirect);  // ajouter un eventListener
             };
 
+            // faire une fenêtre d'alerte avant la suppression des données
             function redirect(){
                 if (deleteBtn != null){
                     var path = localStorage.getItem("urltodel");
