--- a/duchamp_reader/templates/pages/artiste_main.html
+++ b/duchamp_reader/templates/pages/artiste_main.html
@@ -182,7 +182,8 @@
     <div class="basdepage">
         <a class="btn" href="{{url_for('accueil')}}">Accueil</a>
         <a class="btn" href="{{url_for('artiste_add')}}">Ajouter un.e artiste</a>
-        <a class="btn" href="{{url_for('artiste_update', id_artiste=nomination.id_artiste) }}">Modifier cet.te artiste</a>
+        <a class="btn" href="{{url_for('artiste_update', id_artiste=nomination.id_artiste) }}">Modifier l'artiste</a>
+        <btn class="btn deletebtn" value="{{ nomination.id_artiste }}">Supprimer l'artiste</btn>
         <a class="btn" href="{{url_for('artiste_index')}}">Index des artistes</a>
     </div>
 
