--- a/duchamp_reader/templates/pages/galerie_main.html
+++ b/duchamp_reader/templates/pages/galerie_main.html
@@ -13,13 +13,13 @@
 
         <!-- artistes représenté.e.s -->
         <p>La galerie {{galerie.nom}}
-            {% if galerie.represent|length > 1 %} représente les artistes
+            {% if galerie.represent|length > 1 and galerie.represent.full|length > 1 %} représente les artistes
                 <ul>
                     {% for r in galerie.represent %}
                         <li><a href="{{ url_for('artiste_main', id_artiste=r.id_artiste) }}">{{r.artiste.full}}</a></li>
                     {% endfor %}
                 </ul>
-            {% elif galerie.represent|length == 1 %}
+            {% elif galerie.represent|length == 1 and galerie.represent.full|length > 1 %}
                 représente l'artiste
                 {% for r in galerie.represent %}
                     <a href="{{ url_for('artiste_main', id_artiste=r.id_artiste) }}">{{r.artiste.full}}</a>.
@@ -65,8 +65,9 @@
     <!-- footer -->
     <div class="basdepage">
         <a class="btn" href="{{url_for('accueil')}}">Accueil</a>
-        <a class="btn" href="{{ url_for('galerie_update', id_galerie=galerie.id) }}">Modifier cette galerie</a>
-        <btn class="btn deletebtn" value="{{ galerie.id }}">Supprimer cette galerie</btn>
+        <a class="btn" href="{{url_for('galerie_add')}}">Ajouter une galerie</a>
+        <a class="btn" href="{{ url_for('galerie_update', id_galerie=galerie.id) }}">Modifier la galerie</a>
+        <btn class="btn deletebtn" value="{{ galerie.id }}">Supprimer la galerie</btn>
         <a class="btn" href="{{url_for('galerie_index')}}">Index des galeries</a>
     </div>
 {% endblock %}
