--- a/duchamp_reader/templates/pages/ville_index.html
+++ b/duchamp_reader/templates/pages/ville_index.html
@@ -70,6 +70,7 @@
     <!-- footer -->
     <div class="basdepage">
         <a class="btn" href="{{url_for('accueil')}}">Accueil</a>
+        <a class="btn" href="{{url_for('ville_add')}}">Ajouter une ville</a>
     </div>
 
 {% endblock %}
